# conan-demo

./: CMakeLists.txt  README.md  conanfile.py  conanfile.txt
src/: conan_demo_10_17_2021.cpp  conan_demo_10_17_2021.h  conan_demo_10_17_2021_exe.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
